discussion/kv_engine/186947/186947_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54810: Include overflow samples in Prometheus histograms

Make use of the newly-added overflow metrics in timing histograms to
    show the number of samples which exceeded the representable range of
    the histogram.

Example output from _prometheusMetricsHigh endpoint, with 1000
"overflowed" samples synthesized:

    $ http --auth Administrator:asdasd http://localhost:11996/_prometheusMetricsHigh|rg kv_cmd_duration_seconds | rg -w GET
    kv_cmd_duration_seconds_count{bucket="default",opcode="GET"} 4052 1676562996000
    kv_cmd_duration_seconds_sum{bucket="default",opcode="GET"} 0.049494 1676562996000
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="0.000001"} 1 1676562996000
    ...
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="33.554432"} 3052 1676562996000
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="65.011712"} 3052 1676562996000
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="+Inf"} 4052 1676562996000

Note that up to the highest bucket the histogram tracks (65s) there
are cumulatively 3052 samples; however at the "infinity" bucket there
are an additional 1000 samples. These are also reflected in the _count
metric.

Change-Id: I3491997ce50de756f0d414ddf345bddf8e07fd97

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-17 09:16:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-17 09:16:22.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/338527/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-17 09:47:23.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1187/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/statistics/prometheus_collector.cc:57:50: error: no member named "getOverflowCount" in "HdrHistogram" [clang-diagnostic-error]
    histData.sampleCount = v.getValueCount() + v.getOverflowCount();
                                                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1187/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1187/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1425/ : FAILURE

Compile error at ..\kv_engine\statistics\prometheus_collector.cc(57): error C2039: "getOverflowCount": is not a member of "HdrHistogram" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1425/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1149/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1149/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1212/ : FAILURE

Compile error at [2023-02-17T09:44:07.738Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1212/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1178/ : FAILURE

Compile error at [2023-02-17T09:46:34.267Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1178/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1205/ : FAILURE

Compile error at [2023-02-17T09:46:47.998Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1205/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1214/ : FAILURE

Compile error at [2023-02-17T09:43:30.807Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1214/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1216/ : FAILURE

Compile error at [2023-02-17T09:28:07.112Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1216/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1204/ : FAILURE

Compile error at [2023-02-17T09:43:15.610Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1204/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1544/ : FAILURE

Compile error at [2023-02-17T09:39:12.549Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1544/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22797/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
